Playbook runs correctly

--- a/provisioning/roles/chruby/tasks/main.yml
+++ b/provisioning/roles/chruby/tasks/main.yml
@@ -7,3 +7,8 @@
 - name: Install chruby
   shell: wget -O chruby-0.3.8.tar.gz https://github.com/postmodern/chruby/archive/v0.3.8.tar.gz && tar -xzvf chruby-0.3.8.tar.gz && cd chruby-0.3.8/ && sudo make install
   when: chruby_result|failed
+
+- name: Configure chruby
+  template: src=chruby.sh.j2 dest=/etc/profile.d/chruby.sh
+  when: chruby_result|failed
+  sudo: yes
