--- a/provisioning/roles/ruby/tasks/main.yml
+++ b/provisioning/roles/ruby/tasks/main.yml
@@ -5,4 +5,5 @@
 
 - name: Install bundler into Ruby {{item}}
   shell: chruby-exec ruby-{{item}} -- gem install bundler
+    executable=/bin/bash
   with_items: ruby_versions
