--- a/provisioning/roles/node/tasks/main.yml
+++ b/provisioning/roles/node/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
 - name: Install node
   shell: apt-get install -y --force-yes python-software-properties && add-apt-repository -y ppa:chris-lea/node.js && apt-get update -y && apt-get install -y --force-yes nodejs
+    creates=/usr/bin/node
   sudo: yes
