--- a/provisioning/roles/phantomjs/tasks/main.yml
+++ b/provisioning/roles/phantomjs/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 - name: Install phantomjs
   shell: cd /tmp && curl -L -O https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.7-linux-i686.tar.bz2 && tar xjf /tmp/phantomjs-1.9.7-linux-i686.tar.bz2 -C /tmp && mv /tmp/phantomjs-1.9.7-linux-i686/bin/phantomjs /usr/local/bin
-    # creates=/usr/local/bin/phantomjs
+    creates=/usr/local/bin/phantomjs
   sudo: yes
