--- a/provisioning/roles/buildbox/tasks/main.yml
+++ b/provisioning/roles/buildbox/tasks/main.yml
@@ -10,6 +10,12 @@
   shell: ln -sf /home/vagrant/.buildbox/buildbox-agent /usr/local/bin && ln -sf /home/vagrant/.buildbox/buildbox-artifact /usr/local/bin
   sudo: yes
 
+- name: Install custom buildbox bootstrap.sh
+  template: src=bootstrap.sh.j2 dest=~/.buildbox/bootstrap.sh
+
+- name: Add executable bit to bootstrap.sh
+  shell: chmod +x ~/.buildbox/bootstrap.sh
+
 - name: Install BuildBox upstart script
   template: src=buildbox-agent.conf.j2 dest=/etc/init/buildbox-agent.conf
   sudo: yes
